# Gen-AI-solutions

./: pyproject.toml
gen-ai-solutions/: .streamlit
gen-ai-solutions/src/st_pages/: NL2SQL.py  Self_service.py
gen_ai_solutions/: man_page_config.py
gen_ai_solutions/st_pages/: My Chatbot_Local.json  self_service.py  temp_chunk.csv
